--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "gsap": "^3.13.0",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
@@ -80,6 +82,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.17.20",
     "@types/react-big-calendar": "^1.16.2",
     "craco-alias": "^3.0.1"
