--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "gsap": "^3.13.0",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -51,6 +54,7 @@
     "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "resend": "^4.7.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
