--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/gsap": "^1.20.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
@@ -43,7 +44,9 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
+    "node-forge": "^1.3.1",
     "postcss": "^8.5.6",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dnd": "^16.0.1",
