config: update environment template and gitignore for NTFY integration
Add NTFY configuration variables to env template and exclude room
service modal from gitignore to support notification system setup.

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,6 @@ REACT_APP_RESEND_API_KEY=your_resend_api_key_here
 # Push Notifications (VAPID Keys)
 REACT_APP_VAPID_PUBLIC_KEY=your_vapid_public_key
 REACT_APP_VAPID_PRIVATE_KEY=your_vapid_private_key
+
+# Ntfy Notifications Configuration
+REACT_APP_NTFY_TOPIC=hotel-porec-room-401
