--- a/package.json
+++ b/package.json
@@ -69,6 +69,12 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "test:unit": "craco test --testPathPattern='(unit|spec)\\.test\\.(ts|tsx)$' --watchAll=false",
+    "test:integration": "craco test --testPathPattern='integration\\.test\\.(ts|tsx)$' --watchAll=false",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -90,6 +96,7 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.1",
     "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.17.20",
     "@types/react-big-calendar": "^1.16.2",
