--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ src/__tests__/factories/
 src/components/hotel/frontdesk/__tests__/BookingCreation.integration.test.tsx
 
 src/components/hotel/frontdesk/__tests__/
+supabase/functions/fiscalize-invoice/certificate.p12
