feat: complete Croatian B2C fiscalization implementation
✅ Working fiscalization with Croatian Tax Authority TEST endpoint
✅ SSL certificate chain configured
✅ Invoice number formatting corrected
✅ Documentation and test scripts organized

Changes:
- Fiscalization service fully functional
- Edge Function deployed with certificates
- Archive old test scripts
- Add comprehensive documentation
- Organize scripts by category (b2b-b2g, qr-code, production)

Note: Test certificate passwords included for development

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,8 @@ src/components/hotel/frontdesk/__tests__/BookingCreation.integration.test.tsx
 
 src/components/hotel/frontdesk/__tests__/
 supabase/functions/fiscalize-invoice/certificate.p12
+
+.serena/memories/
+
+# Fiscalization test scripts with passwords
+scripts/production/test-fina-cert.js
