--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@types/gsap": "^1.20.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
@@ -37,6 +36,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "fast-xml-parser": "^5.2.5",
     "gsap": "^3.13.0",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -63,7 +63,11 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "uuid": "^13.0.0",
+    "web-vitals": "^2.1.4",
+    "xml-crypto": "^6.1.2",
+    "xml2js": "^0.6.2",
+    "xmldsigjs": "^2.7.0"
   },
   "scripts": {
     "start": "craco start",
@@ -99,6 +103,7 @@
     "@playwright/test": "^1.55.1",
     "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.17.20",
+    "@types/qrcode": "^1.5.5",
     "@types/react-big-calendar": "^1.16.2",
     "craco-alias": "^3.0.1",
     "jest-environment-jsdom": "^30.0.5",
