--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node-forge": "^1.3.1",
     "postcss": "^8.5.6",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dnd": "^16.0.1",
