chore: Ignore Supabase CLI temporary files
- Add supabase/.temp/ to gitignore
- Prevents temporary CLI files from being committed
- Keeps repository clean

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ supabase/functions/fiscalize-invoice/certificate.p12
 
 # Fiscalization test scripts with passwords
 scripts/production/test-fina-cert.js
+
+# Supabase CLI temporary files
+supabase/.temp/
