feat: dualt env with mcp change scripts

--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
   },
   "scripts": {
     "start": "craco start",
+    "prelocal": "scripts/hp-mcp-local",
     "local": "cross-env REACT_APP_SUPABASE_URL=http://127.0.0.1:54321 REACT_APP_SUPABASE_ANON_KEY=sb_publishable_ACJWlzQHlZjBrEguHvfOxg_3BJgxAaH REACT_APP_ENVIRONMENT=local craco start",
+    "preproduction": "scripts/show-prod-warning.sh",
     "production": "cross-env REACT_APP_SUPABASE_URL=https://gkbpthurkucotikjefra.supabase.co REACT_APP_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdrYnB0aHVya3Vjb3Rpa2plZnJhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTI3MzMxNTksImV4cCI6MjA2ODMwOTE1OX0.pXbrXBCeJHgXzHGTB4WatYfWsaFFkrlr8ChUkVIV6SY REACT_APP_ENVIRONMENT=production craco start",
     "build": "craco build",
     "test": "craco test",
