--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.mcp
 
 npm-debug.log*
 yarn-debug.log*
@@ -78,3 +79,7 @@ scripts/production/test-fina-cert.js
 
 # Supabase CLI temporary files
 supabase/.temp/
+
+# TaskMaster - keep config and PRD, ignore generated complexity reports
+.taskmaster/complexity/
+.taskmaster/.cache/
