--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@playwright/test": "^1.55.1",
     "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.17.20",
+    "@vercel/analytics": "^1.5.0",
     "@types/qrcode": "^1.5.5",
     "@types/react-big-calendar": "^1.16.2",
     "craco-alias": "^3.0.1",
