--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "CI=false craco build",
     "test": "craco test",
     "test:unit": "craco test --testPathPattern='(unit|spec)\\.test\\.(ts|tsx)$' --watchAll=false",
     "test:integration": "craco test --testPathPattern='integration\\.test\\.(ts|tsx)$' --watchAll=false",
